manifest/war-staging/namespaces/core-apps/goapp/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: go-app-ingress
  namespace: core-apps
  labels:
    name:  ingress-test
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: goapp.war.me
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: goapp
            port:
              number: 8000
